[gd_scene load_steps=4 format=3 uid="uid://ccnubf5y10gf7"]

[ext_resource type="Theme" uid="uid://do0gxw8cx220d" path="res://theming/pokerpedia.tres" id="1_jbofv"]
[ext_resource type="Script" path="res://scripts/ui/settings.gd" id="2_hbgos"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iahhu"]
bg_color = Color(1, 0.948887, 0.822917, 1)

[node name="Settings" type="Panel"]
offset_right = 473.0
offset_bottom = 550.0
size_flags_horizontal = 3
theme = ExtResource("1_jbofv")
theme_override_styles/panel = SubResource("StyleBoxFlat_iahhu")
script = ExtResource("2_hbgos")

[node name="PageNum" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -70.0
offset_right = -10.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 22
text = "SETTINGS"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VOLUME" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "VOLUME"
horizontal_alignment = 1

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Music"]
unique_name_in_owner = true
modulate = Color(0.258824, 0.478431, 0.831373, 1)
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFX"]
layout_mode = 2
size_flags_horizontal = 0
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFX"]
unique_name_in_owner = true
modulate = Color(0.258824, 0.478431, 0.831373, 1)
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CONTROLS" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "CONTROLS"
horizontal_alignment = 1

[node name="Check" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Check"]
layout_mode = 2
size_flags_horizontal = 2
text = "Check / Call"

[node name="CheckHotkey" type="Button" parent="MarginContainer/VBoxContainer/Check"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "V"
metadata/action = "check_call"

[node name="Bet" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Bet"]
layout_mode = 2
size_flags_horizontal = 2
text = "Bet / Raise"

[node name="BetHotkey" type="Button" parent="MarginContainer/VBoxContainer/Bet"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "B"
metadata/action = "bet_raise"

[node name="Fold" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Fold"]
layout_mode = 2
size_flags_horizontal = 2
text = "Fold"

[node name="FoldHotkey" type="Button" parent="MarginContainer/VBoxContainer/Fold"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "N"
metadata/action = "fold"
